
v0.13next
=========

Released: UNRELEASED

* Incorporate quotaholder in astakos
  * obsolete settings:
    PITHOS_USE_QUOTAHOLDER, PITHOS_QUOTAHOLDER_URL, PITHOS_QUOTAHOLDER_TOKEN
  * new settins:
    PITHOS_ASTAKOSCLIENT_POOLSIZE

Synnefo-wide
------------
* Create 'snf_django' Python package to hold common code for all Synnefo
  components.

Astakos
-------

Cyclades
--------
* Remove 'CYCLADES_USER_CATALOG_URL' and 'CYCLADES_USER_FEEDBACK_URL' settings
* Remove CYCLADES_USE_QUOTAHOLDER, CYCLADES_QUOTAHOLDER_TOKEN,
  CYCLADES_QUOTAHOLDER_URL, CYCLADES_QUOTAHOLDER_POOLSIZE settings
* Rename 'cyclades-usage-verify' management command to
  'reconcile-resources-cyclades'. Also, remove 'cyclades-usage-reset' command,
  which is equivalent to 'reconcile-resources-cyclades --fix'.
* Rename 'cyclades-reconcile-commissions' management command to
  'reconcile-commissions-cyclades'.
* Remove obsolete 'MAX_VMS_PER_USER', 'MAX_NETWORKS_PER_USER',
  "VMS_USER_QUOTA" and "NETWORKS_USER_QUOTA" settings, since their usage
  is covered by Quotaholder.


Pithos
------
* Remove PITHOS_AUTHENTICATION_USERS setting, which was used to override
  astakos users.
* Remove 'PITHOS_USER_CATALOG_URL', 'PITHOS_USER_FEEDBACK_URL' and
  'PITHOS_USER_LOGIN_URL' settings.

Tools
-----


.. _Changelog-0.13:

v0.13
=====

Released: Wed Apr 10 18:52:50 EEST 2013

In v0.13 the code was very heavily refactored for increased uniformity since
most of the Synnefo components have been merged into a single repository. Thus,
**just for this version** we will not document a complete Changelog (features,
fixes, improvements, issues, setting changes), but rather just copy from the
`NEWS` file with minor additions wherever needed.

Synnefo-wide
------------

* Support for pooling throughout Synnefo

  * Pooled Django DB connections, Pithos backend connections, HTTP
    connections using single `objpool` package

* Improved management commands

  * Unified codebase for output of tables in JSON, CSV
